# time-in

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
time_in/: __main__.py  countryinfo.py
